# eocanvas

./: LICENSE.txt  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml
demo/: earthkit.ipynb  keystore.ipynb  notebook.ipynb  olci_binding.xml
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  external.rst  index.rst  installation.rst  ogc.rst  quickstart.rst  usage.rst
docs/source/_static/: robots.txt
docs/source/static/: robots.txt
eocanvas/: __init__.py  api.py  auth.py  config.py  exceptions.py  http.py  keystore.py  logging.py  processes.py  urls.yaml  utils.py
eocanvas/datatailor/: __init__.py  chain.py
eocanvas/snap/: __init__.py  graph.py  operator.py  operatorparams.py  operators.json  snap.py  target_band.py  target_band_descriptors.py  utils.py
eocanvas/snap/binning/: __init__.py  aggregator_avg.py  aggregator_avg_outlier.py  aggregator_minmax.py  aggregator_on_max_set.py  aggregator_percentile.py  aggregator_sum.py  aggregators.py  binning_band.py  binning_variable.py  binning_variables.py  output_bands.py
eocanvas/snap/data/: operators.yaml
tests/: test_api.py  test_auth.py  test_config.py  test_datatailor.py  test_http.py  test_process.py  test_shearwater.py  test_snap.py
tests/data/: chain.yaml  chain_invalid.yaml  graph.xml  invalid_urls.yaml  test_datatailor.py  valid_urls.yaml
